# ai-face-recognition

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_pipeline_quick.py  verify_pipeline.py
.github/workflows/: ci.yml
api/: __init__.py  main.py  metrics.py
api/middleware/: auth.py  cors.py
api/routers/: __init__.py  health.py  recognition.py  swap.py
api/schemas/: __init__.py  requests.py  responses.py
config/: __init__.py  config.yaml  settings.py
core/: __init__.py
core/detector/: __init__.py  base_detector.py  yolo_detector.py
core/enhancer/: __init__.py  base_enhancer.py  codeformer_enhancer.py  gfpgan_enhancer.py
core/pipeline/: __init__.py  face_pipeline.py  video_pipeline.py
core/recognizer/: __init__.py  base_recognizer.py  face_database.py  insightface_recognizer.py
core/swapper/: __init__.py  base_swapper.py  inswapper.py
core/tracker/: __init__.py  iou_tracker.py
docker/: Dockerfile  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/: animations.ts  constants.ts  theme.ts
mobile/src/api/: client.ts
mobile/src/components/: ActionButton.tsx  EmptyState.tsx  GradientHeader.tsx  ImagePickerButton.tsx  LoadingOverlay.tsx  PressableCard.tsx  SectionLabel.tsx  StatusBadge.tsx
mobile/src/screens/: FacesScreen.tsx  HomeScreen.tsx  RecognizeScreen.tsx  SwapScreen.tsx
mobile/src/types/: api.ts
models/: .gitkeep
scripts/: healthcheck.sh  setup.bat  setup.sh
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_detector.py  test_enhancer.py  test_recognizer.py  test_swapper.py
ui/: app.py
ui/pages/: face_recognition.py  face_swap.py
utils/: __init__.py  circuit_breaker.py  download_models.py  image_utils.py  logger.py  mask_utils.py  video_utils.py
