[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-face-recognition"
version = "1.0.0"
description = "Production-grade AI pipeline for face detection, recognition, and swapping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "norfrt6-lab"},
]
keywords = ["face-recognition", "face-swap", "yolov8", "insightface", "deepfake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Repository = "https://github.com/norfrt6-lab/ai-face-recognition"
Issues = "https://github.com/norfrt6-lab/ai-face-recognition/issues"

[project.scripts]
download-models = "utils.download_models:main"

[tool.setuptools.packages.find]
include = ["core*", "api*", "utils*", "config*", "ui*"]
exclude = ["tests*", "docker*", "scripts*"]

# ── Black ──────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ── isort ──────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core", "api", "utils", "config", "ui"]

# ── flake8 (via pyproject-flake8) ──────────────────────────────
# Note: flake8 does not natively read pyproject.toml.
# Use pflake8 or Flake8-pyproject for pyproject.toml support.

# ── mypy ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# ── pytest ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring downloaded models (deselect with '-m \"not integration\"')",
    "slow: marks tests that take >10s to run",
]

# ── coverage ───────────────────────────────────────────────────
[tool.coverage.run]
source = ["core", "api", "utils", "config"]
omit = ["tests/*", "ui/*", "scripts/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
